--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: english_words
 description: Utilities for working with English words.
-version: 0.0.1
+version: 1.0.0
 author: Filip Hracek <filip.hracek@gmail.com>
-#homepage: https://www.example.com
+homepage: https://github.com/filiph/english_words
 
 environment:
-  sdk: '>=1.0.0 <2.0.0'
+  sdk: '>=1.22.0 <2.0.0'
 
 dependencies:
   string_scanner: ^1.0.1
