--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,9 +1,10 @@
 analyzer:
-  strong-mode: true
+  strong-mode:
+    implicit-casts: false
+    implicit-dynamic: false
 linter:
   rules:
     - always_declare_return_types
-#    - always_specify_types
     - annotate_overrides
     - avoid_as
     - avoid_empty_else
@@ -26,7 +27,6 @@ linter:
     - library_names
     - library_prefixes
     - list_remove_unrelated_type
-#    - literal_only_boolean_expressions
     - non_constant_identifier_names
     - one_member_abstracts
     - only_throw_errors
