--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,9 @@
 name: english_words
-description: Utilities for working with English words.
-version: 3.0.1
+description: >
+  Utilities for working with English words. Counts syllables, generates
+  well-sounding word combinations, and provides access to the top 5000 English
+  words by usage.
+version: 3.1.0
 author: Filip Hracek <filip.hracek@gmail.com>
 homepage: https://github.com/filiph/english_words
 
