--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: >
   Utilities for working with English words. Counts syllables, generates
   well-sounding word combinations, and provides access to the top 5000 English
   words by usage.
-version: 3.1.2
+version: 3.1.3
 author: Filip Hracek <filip.hracek@gmail.com>
 homepage: https://github.com/filiph/english_words
 
@@ -15,4 +15,4 @@ dependencies:
 
 dev_dependencies:
   benchmark_harness: ^1.0.4
-  test: '>=0.12.20 <0.13.0'
+  test: ^1.0.0
