--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,16 +3,16 @@ description: >
   Utilities for working with English words. Counts syllables, generates
   well-sounding word combinations, and provides access to the top 5000 English
   words by usage.
-version: 3.1.5
+version: 4.0.0
 author: Filip Hracek <filip.hracek@gmail.com>
 homepage: https://github.com/filiph/english_words
 
 environment:
-  sdk: '>=1.22.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  string_scanner: ^1.0.1
+  string_scanner: ^1.1.0
 
 dev_dependencies:
-  benchmark_harness: ^1.0.4
-  test: ^1.0.0
+  benchmark_harness: ^2.0.0
+  test: ^1.16.8
