--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,15 +3,15 @@ description: >
   Utilities for working with English words. Counts syllables, generates
   well-sounding word combinations, and provides access to the top 5000 English
   words by usage.
-version: 4.0.0-nullsafety.0
+version: 4.0.0
 homepage: https://github.com/filiph/english_words
 
 environment:
-  sdk: '>=2.12.0-0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  string_scanner: ^1.1.0-nullsafety.3
+  string_scanner: ^1.1.0
 
 dev_dependencies:
   # benchmark_harness: ^1.0.4
-  test: ^1.16.0-nullsafety.9
+  test: ^1.16.8
